# cpp-ECS-game-engine

./: README.md
engine/: CMakeLists.txt
engine/components/: AccelerationComponent.h  CameraComponent.h  CameraFollowerComponent.h  CameraShakeComponent.h  CollisionComponent.h  InputComponent.h  LocationComponent.h  MovementComponent.h  ScoreComponent.h  SpawnComponent.h  SpriteComponent.h  TimeComponent.h
engine/core/: ComponentStorage.h  ECSEngine.h  MathUtil.h  pack.h
engine/managers/: EntityManager.h  SoundManager.cpp  SoundManager.h  SpriteManager.cpp  SpriteManager.h  WindowManager.cpp  WindowManager.h
engine/systems/: CameraSystem.h  CollisionSystem.h  CollisionSystemUpdate.h  GravitySystem.h  InputSystem.h  MovementSystem.h  ProcessEvents.h  ScoreSystem.h  SpawnSystem.h  SpriteSystem.h  TimeSystem.h
src/: MapLoader.h  PlayerLoader.h  ScoreLoader.h  main.cpp
